# uAuthenticator

./: .gitignore  CMakeLists.txt  LICENSE
cmake/: FindOpenLDAP.cmake  uAuthenticatorConfig.cmake.in  uAuthenticatorConfigVersion.cmake.in
include/uAuthenticator/: authenticator.hpp  credentials.hpp  ldap.hpp  permissions.hpp
src/: authenticator.cpp  credentials.cpp  ldap.cpp  permissions.cpp  version.cpp  version.hpp.in
